# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-06-06 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the accuracy of the time used for the start of a
      restart for the data used by the CloudI Service API
      function services_status

2018-06-04 Michael Truog   <mjtruog at protonmail dot com>

    * Add the remaining changes for JSON support in
      cloudi_service_api_requests

2018-06-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add JSON as a supported format of cloudi_service_api_requests
    * Switch the JSON-RPC support in cloudi_service_api_requests to
      use JSON text for the request/response instead of erlang terms
    * Add the functions cloudi_string:term_to_binary_compact/1 and
      cloudi_string:term_to_list_compact/1

2018-06-01 Michael Truog   <mjtruog at protonmail dot com>

    * Set the service process dictionary uptime to use a
      nanoseconds offset from the node start time to allow
      the values to be compared in a unit of time
    * Fix cloudi_service_api_requests so it can handle
      module reloading

2018-05-31 Michael Truog   <mjtruog at protonmail dot com>

    * Make kernel logger configuration backwards compatible

2018-05-30 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the function order in the cloudi_service_api module
      so it matches the API documentation
    * Fix kernel logger configuration based on Erlang/OTP 21-rc2

2018-05-29 Michael Truog   <mjtruog at protonmail dot com>

    * Modified the CloudI Service API function services_status output
      to retain downtime for smaller time periods after past downtime
      even if there is no recent downtime
      (at least 3 time periods remain visible)

2018-05-28 Michael Truog   <mjtruog at protonmail dot com>

    * Fixed the CloudI Service API function services_status output
      related to the availability of the total uptime
